Add screenshot functionality to web scraping
- Add screenshot and full_page_screenshot parameters to pydoll service
- Implement screenshot capture using pydoll PageCommands.capture_screenshot()
- Update playwright scraper to pass screenshot parameters
- Modify single_url.ts to handle screenshot data in response
- Add proper Chrome browser configuration for containerized environment
- Update all response types to include screenshot fields
- Add test_screenshot.py for testing screenshot functionality
- Enhanced error handling for screenshot failures

--- a/apps/pydoll-service/Dockerfile
+++ b/apps/pydoll-service/Dockerfile
@@ -1,12 +1,15 @@
 FROM python:3.11-slim
 
-# Install system dependencies for Chrome and pydoll
+# Install system dependencies for Chrome, pydoll, and virtual display
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     unzip \
     curl \
     xvfb \
+    x11-utils \
+    xauth \
+    python3-tk \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Google Chrome
@@ -30,6 +33,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
+
+# Create screenshots directory
+RUN mkdir -p /app/screenshots && chmod 755 /app/screenshots
 
 # Expose port
 EXPOSE 3003
